--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Bonjour M. Menard, M. Franco,\n",
     "\n",
-    "J'espère que vous avez passé de bonnes vacances de Toussaint. Ceci est mon jupyter notebook sur le project de Détection d'anomalies dans les signaux ECG. Permettez-moi, s'il vous plait, d'utiliser l'anglais dans ce notebook pour ma commodité. Merci et bonne lecture."
+    "J'espère que vous avez passé de bonnes vacances de Toussaint. Ceci est mon jupyter notebook sur le project de Détection d'anomalies dans les signaux ECG. Merci de me permettre d'utiliser l'anglais dans ce notebook pour ma commodité. Merci et bonne lecture."
    ]
   },
   {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ae711499",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "# Load dada\n",
+    "# Load dada from ecg_dataset.mat\n",
     "file_path = \"./ecg_dataset.mat\"\n",
     "\n",
     "try:\n",
